# full-stack-template

./: README.md  docker-compose.yml
server/: Dockerfile  pyproject.toml
server/app/: main.py
server/app/api/: items.py
server/app/dependencies/: auth.py  database.py
server/app/models/: auth.py
server/config/: settings.py
server/db/mongodb/: crud.py  database.py  models.py
server/db/postgres/: crud.py  database.py  models.py
server/tests/: conftest.py
