[tool.poetry]
name = "server"
version = "0.1.0"
description = "Common dependencies"
authors = ["Nam Thai <nam.thai.dev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
motor = {extras = ["asyncio"], version = "^3.2.0"}
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
pytest = "^7.4.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
